--- a/app/globals.css
+++ b/app/globals.css
@@ -180,3 +180,55 @@ input[type="radio"] {
     min-width: 44px;
   }
 }
+
+/* Nova Poshta Button Styles */
+.nova-poshta-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  padding: 11px 40px 11px 16px;
+  border: 1px solid #e2e8f0;
+  border-radius: 12px;
+  font-family: Inter, sans-serif;
+  background-color: #fff;
+  cursor: pointer;
+  max-width: 344px;
+  position: relative;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.nova-poshta-button img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.nova-poshta-button .angle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
+  height: 16px;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+}
+
+.wrapper .text {
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.wrapper .text-description {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #475569;
+}
